# locallm

./: .gitignore  CHANGELOG.rst  Dockerfile  LICENCE.txt  MANIFEST.in  Makefile  README.md  __init__.py  batch_script.py  cookiebaked.json  freezer.py  requirements.txt  setup.cfg
docs/: cli.rst  conf.py  development.rst  index.rst  install.rst  sphinx_reload.py
docs/references/: exceptions.rst  hello.rst  index.rst  logger.rst
examples/: __init__.py
examples/autodoc/: README.md  __main__.py
examples/autodoc/templates/: many.py  one.py
examples/cli/: __main__.py
examples/goinfer/: __main__.py
examples/koboldcpp/: __main__.py
examples/local/: __main__.py
examples/ollama/: __main__.py
locallm/: __init__.py  core.py  exceptions.py  logger.py  provider.py  schemas.py
locallm/cli/: entrypoint.py  greet.py  version.py
locallm/providers/: goinfer.py  koboldcpp.py  local.py  ollama.py
tests/: conftest.py
tests/000_lm/: 001_lm_init_provider.py  002_local_run.py  003_goinfer_run.py  004_koboldcpp_run.py  005_ollama_run.py
