;;
;; locallm package
;;
[metadata]
name = locallm
version = 0.1.0
description = An api to query local language models using different backends
long_description = file:README.md
long_description_content_type = text/markdown
author = emencia
author_email = contact@emencia.com
url = https://github.com/emencia/locallm
project_urls =
    Source Code = https://github.com/emencia/locallm
    Issue Tracker = https://github.com/emencia/locallm/issues
    Changelog = https://locallm.readthedocs.io/en/latest/history.html
    Documentation = https://locallm.readthedocs.io/
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
install_requires =
    click>=8.0
    colorlog
    colorama
    pydantic
    requests
    sseclient-py
    llama-cpp-python
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
quality =
    flake8
    tox
    twine
doc =
    sphinx
    furo==2023.7.26
    sphinx-copybutton==0.5.2
doc-live =
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    locallm = locallm.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude = .git,./venv/,./build/,./.envs/,./paver/,./tests/,__pycache__

[tool:pytest]
addopts = -svv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,310}

[testenv]

commands =
    pip install -e .[dev]
    pytest -svv tests
